<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:padding="@dimen/paddinge"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_sms_receiver_app"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <Button
        android:layout_marginBottom="@dimen/delapan"
        android:id="@+id/btn_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_sms_permission"/>
    <Button
        android:id="@+id/btn_download"
        android:text="@string/download_a_file"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>