<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SmsReceiverActivity">
    <TextView
        android:id="@+id/tv_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/coming_from"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/this_play"
        android:textSize="18sp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
    <Button
        android:id="@+id/btn_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_gravity="end"
        android:text="@string/close"/>
</LinearLayout>